--- a/springboot-swagger/pom.xml
+++ b/springboot-swagger/pom.xml
@@ -20,6 +20,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>1.8</java.version>
+		<docker.image.prefix>springboot-swagger</docker.image.prefix>
 	</properties>
 
 	<dependencies>
@@ -87,6 +88,19 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+
+			<plugin>
+				<groupId>com.spotify</groupId>
+				<artifactId>docker-maven-plugin</artifactId>
+				<version>1.3.6</version>
+				<configuration>
+                    <repository>${docker.image.prefix}/${project.artifactId}</repository>
+					<buildArgs>
+						<JAR_FILE>target/${project.build.finalName}.jar</JAR_FILE>
+					</buildArgs>
+                </configuration>
+			</plugin>
+
 		</plugins>
 	</build>
 
