--- a/springboot-swagger/pom.xml
+++ b/springboot-swagger/pom.xml
@@ -95,6 +95,8 @@
 				<artifactId>docker-maven-plugin</artifactId>
 				<version>1.0.0</version>
 				<configuration>
+				    <imageName>${docker.image.prefix}</imageName>				    
+					<dockerDirectory>docker</dockerDirectory>
 					<repository>${docker.image.prefix}/${project.artifactId}</repository>
 					<buildArgs>
 						<JAR_FILE>target/${project.build.finalName}.jar</JAR_FILE>
