--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -33,4 +33,6 @@ eureka:
     registerWithEureka: true
     fetchRegistry: true
     serviceUrl:
-      defaultZone: ${EUREKA_URI}/eureka  
+      defaultZone: ${EUREKA_URI}/eureka 
+      
+  instance.prefer-ip-address: true   
