--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 server:
   port: 8763
 
-  context-path: /swagger
+  context-path: /swagger-service
 
 management:
   security:
@@ -20,7 +20,10 @@ eureka:
     fetchRegistry: true
     serviceUrl:
       defaultZone: ${EUREKA_URI:http://localhost:8761}/eureka
-      
+
+  instance: 
+    hostname: localhost
+    preferIpAddress: false        
 
 ---
 
@@ -36,4 +39,5 @@ eureka:
       defaultZone: ${EUREKA_URI}/eureka 
       
   instance: 
-    preferIpAddress: true  
+    hostname: ${SERVICE_HOST_NAME}
+    preferIpAddress: false  
